styles/style.css
:root {
  --primary-color: #52a470;
  --background-color: #ffffff;
  --gold-color: #f5cb33;
  --accent-color: #39734e;
  --primary-variant: #75b68d;
  font-family: 'Montserrat', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
}

::placeholder {
  color: lightgrey;
  opacity: 50%;
}

nav {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 1em 0;
  width: 100%;
  border-bottom: 0.5em solid var(--primary-color);
}

nav img {
  width: 5em;
  height: 5em;
  padding-left: 1.5em;
}

nav ul {
  padding-right: 1.5em;
  display: flex;
  justify-content: space-between;
}

nav li:first-child {
  color: var(--gold-color);
}

nav li:last-child {
  padding: 0.8em 0.4em 0.8em 0.4em;
  border-radius: 0.3em;
  border: 1.5px solid var(--accent-color);
}

a {
  text-decoration: none;
  color: inherit;
  padding: 0vw 0.7vw;
}

nav div {
  display: none;
}

nav li {
  display: inline-block;
  padding: 0 1em;
  font-size: 0.9em;
  font-weight: bold;
  margin: auto;
  color: var(--accent-color);
  text-transform: uppercase;
}

footer {
  display: flex;
  justify-content: space-between;
  background-color: var(--primary-color);
  padding: 1vw 3vw 0.5vw 3vw;
  flex-wrap: wrap;
}

footer ul {
  padding-left: 0;
}

footer li {
  display: block;
  color: white;
  margin: 0.4em 0.5em;
  padding-top: 0.5vw;
  font-size: 0.8em;
}

footer li:first-child {
  font-weight: bold;
  margin-bottom: 1em;
  font-size: 0.9em;
}

#email {
  background-color: var(--primary-color);
  color: white;
  border: 1.5px solid;
  padding: 0.5em;
  border-radius: 0.3em;
}

#subscribe {
  color: var(--gold-color);
  background-color: white;
  padding: 0.5em 2em;
  border-radius: 0.4em;
  margin: 1em;
  font-weight: bold;
}


#mainpage-img {
  width: 98.95%;
  height: 80vh;
  position: absolute;
}

.card {
  position: relative;
  display: inline-block;
  padding: 1.5em;
  border-radius: 0.5em;
  background-color: var(--background-color);
  margin: 0 8em 0 8em;
  width: auto;
}

span.card{
  top: 7em;
}

.card > p {
  text-align: center;
  font-size: 1.1em;
  font-weight: bold;
  margin: auto;
  letter-spacing: 0.4px;
}

.card > p > strong {
  display: inline-block;
  font-size: 1.0em;
  margin: auto;
  color: var(--primary-color);
}

.card > p > strong:last-child {
  margin-right: 0;
}

#mainpage-section {
  min-height: 80vh;
}

.card div {
  display: flex;
  margin: 0.5em auto;
  padding: 0.1vh 0.3em;
}

.card label {
  font-size: 0.8em;
  color: var(--primary-color);
  font-weight: bold;
  padding-bottom: 0.1em;
}

.card label > input {
  display: block;
  border: 1.5px solid var(--primary-color);
  border-radius: 0.3em;
  flex-grow: 1;
  width: 35em;
  padding: 0.5em;
  margin-bottom: 0.5em;
  margin-top: 0.3em;
}

.card #submit {
  cursor: pointer;
  display: block;
  background-color: var(--primary-color);
  color: white;
  font-weight: bold;
  border-radius: 0.3em;
  border: 0;
  width: 35em;
  font-size: 0.8em;
  padding: 1em 3em;
  margin-right: auto;
  margin-top: 1vh;
  flex-grow: 1;
}

div#dates {
  display: flex;
  justify-content: space-between;
}

div#dates label > input {
  position: static;
  width: 16em;
}

#filters {
  background-color: var(--primary-variant);
  color: var(--background-color);
  font-size: 0.7em;
  padding: 1em;
}

#filters div:first-child{
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  width: 75%;
}

#filters div ul:last-child {
  margin-left: auto;
}

#filters ul li:first-child {
  font-size: 1.2em;
  font-weight: bold;
}

#filters li {
  display: flex;
  align-items: center;
}

#filters li input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -o-appearance: none;
  appearance: none;
  border: 1px solid var(--background-color);
  height: 0.5em;
  width: 0.5em;
  padding: 0.3em;
  border-radius: 20%;
  transition-duration: 0.3s;
  background-color: var(--primary-variant);
}

#filters li input:checked{
  background-color: var(--background-color);
}

#filters li label {
  display: inline-block;
  font-weight: lighter;
  height: 100%;
  margin: 0.5vh 0.4vw;
  margin-top: 0.9vh;
  letter-spacing: 0.05em;

}

#filters li:first-child {
  margin-bottom: 1vh;
}

.button {
  background: var(--accent-color);
  padding: 0.8em 0.5em;
  width: 10em;
  text-align: center;
  font-weight: bold;
  margin: 0.5em auto;
  border-radius: 0.3em;
  letter-spacing: 0.1em;
  cursor: pointer;
}


#houses article{
  display: flex;
  margin: 2em auto;
  flex-wrap: wrap;
  max-width: 55em;
  justify-content: center;
  padding: 6vh 0em;
}

#houses article img {
  width: 25em;
  height: 15em;
  border-radius: 0.4em;
}

#houses article div div {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-width: 25em;
}

#houses article header {
  font-size: 1.5em;
  font-weight: bold;
  color: var(--accent-color);
  margin-bottom: 2vh;
}

#houses article header::before,
#houses article header::after{
  content: '"';
}

#houses article > div{
  padding: 0.5em;
  margin-left: 1.5em;
  max-width: 30em;
  margin-left: 1.5em;

}

.fas{
  text-align: center;
  font-size: 1.5em;
  width: 3vw;
  color: var(--accent-color);
}

i.fa-star{
  color: var(--gold-color);
}

#houses article div div span {
  flex-basis: 50%;
  display: inline-block;
  padding: 0.7em 0;
  color: var(--primary-color);
  font-weight: lighter;
  letter-spacing: 0.05em;
}

#houses article div div span span {
  margin: 0em 0.6em;
}

#houses article div div span:nth-child(even){
  text-align: end;
}

#house-page{
  padding: 0 15em;
}

#house-information{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
}

#description{
  grid-column: 1/4;
  font-size: 1.1em;
  padding-right: 1em;
}
#house-information aside{
  grid-column: 4/5;
  border-left: 1px solid var(--accent-color);
  padding-left: 2em;
}

#house-information aside > div{
  display: flex;
  flex-direction: column;
}

#house-information aside > div > *{
  flex-basis: 100%;
  margin: 0.5em 0;
  color: var(--primary-color);
}

#house-information aside > div > span > span {
  display: inline-block;
  padding: 0 0.5em;
}

#reviews{
  grid-column: 1/3;
}

#reviews div{
  font-size: 0.9em;
}

#reviews > span{
  display: flex;
  justify-content: space-between;
  padding: 0.7em 0;
}

#reviews > span > span{
  display: flex;
  justify-content: space-between;
  padding: 0.7em 0;
  font-size: 0.9em;
}


#reviews > span > span > span{
  margin: 0.5em;
  padding-right: 1em;
  color: var(--primary-color);
}

#reviews > span > span > span:first-child{
  border-right: 1px solid var(--accent-color);
}

#reviews > div > article {
  margin: 1em 0;
}

#reviews > div > article > div {
  display: flex;
  align-items: center;
}

#reviews > div h4{
  font-size: 1.2em;
  font-weight: normal;
  display: inline-block;
  margin: 0;
  padding-left: 0.8em;
  color: var(--primary-color);
}

#reviews > div p{
  font-size: 0.9em;
}

#reserve{
  grid-column: 3/5;
  padding: 1.5em;
  border: 1px solid var(--primary-color);
  margin: 4em 1em;
}

.title{
  color: var(--accent-color);
  font-size: 1.2em;
  padding: 0.7em 0;
  margin: 0;
  font-weight: normal;
}

#photos-carousel{
  width: 27em;
  display: flex;
  flex-wrap: wrap;
  border: 0.5px solid black;
  align-items: center;
}

#photos-carousel > div{
  display: flex;
  justify-content: center;
  flex-wrap: nowrap;
  width: 27em;
  order: 2;
}

#photos-carousel div img {
  flex: 1 1 0px;
  border: 0.5px solid black;
}

#photos-carousel div img.selected {
  opacity: 60%;
}


#photos-carousel img.active{
  flex-basis: 100%;
  order: 1;
  border: 0.5px solid black;
  height: 35vh;
}

#carousel {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  margin-bottom: 4em;
}

#carousel i {
  margin: 0 1em;
}

#house-title{
  display: flex;
  justify-content: space-between;
  margin: 1.5em 0;
}

#house-title aside  {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#house-title aside span {
  margin: auto;
}

.photo-avatar {
  border-radius: 50%;
  width: 4.5em;
  height: 4.5em;
}


#house-description h1::before,
#house-description h1::after{
  content: "\"";
}

#house-description h1{
  color: var(--primary-color);
}

#house-description h3{
  color: var(--accent-color);
  font-size: 0.9em;
  font-weight: normal;
}

